--- a/expiration/package.json
+++ b/expiration/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "expiration",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,28 +15,19 @@
     ]
   },
   "keywords": [],
-  "author": "Filippo Rivolta",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "@frivolta-tickets/common": "^1.0.13",
-    "@types/cookie-session": "^2.0.43",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.5",
-    "cookie-session": "^1.4.0",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "express-validator": "^6.12.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.4",
+    "@types/bull": "^3.15.2",
+    "bull": "^3.22.10",
+    "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
-    "@types/supertest": "^2.0.11",
     "jest": "^27.1.0",
-    "mongodb-memory-server": "^7.4.0",
-    "supertest": "^6.1.6",
     "ts-jest": "^27.0.5"
   }
 }
