--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -4,7 +4,7 @@ deploy:
   kubectl:
     manifests:
       - ./infra/k8s/*
-      - ./infra/k8s_dev/*
+      - ./infra/k8s-dev/*
 build:
   local:
     push: false
